--- a/styles.css
+++ b/styles.css
@@ -10,31 +10,60 @@ header {
     background: black;
     background-image: url("images/hero.png");
     background-size: 100%;
+    background-repeat: no-repeat;
     background-position: center;
     height: 300px;
     padding: 10px 20px 10px 20px;
-    font-size: 1rem;
+    font-size: 3rem;
     text-align: center;
 }
-section {
+
+header h1 {
+    font-size: 4rem;
+    text-align: left;
+    padding: 10px 20px 10px 50px;
+    text-transform: uppercase;
+    color: rgb(240, 236, 236);
+}
+.features {
     background: white;
     color: grey;
 
     padding: 20px;
 
     display: flex;
+    flex-wrap: wrap;
     flex-direction: row;
 }
+
+.features figure{
+    width:250px;
+    margin:auto;
+    text-align: center;
+    text-transform: uppercase;
+}
+
+.features figure img {
+    width:250px;
+    height:250px;
+    border-radius: 50%;
+    box-shadow: grey 0 0 10px;
+    border: 2px solid white;
+}
+
 footer {
     background: black;
-    padding: 10px 20px;
+    padding: 20px 20px;
+    color: grey;
+    text-align:center;
+    font-size:12px
 }
 div {
     background: rgb(211, 211, 211);
     margin:auto;
     width: 100px;
 }
-ul {
+nav ul {
     margin: 0;
     padding: 0;
     list-style-type: none;
@@ -47,8 +76,8 @@ li {
 }
 a {
     text-decoration: none;
-    color: rgb(151, 151, 184);
-    font-size: 1rem;
+    color: rgb(255, 255, 255);
+    font-size: 1.5rem;
 }
 a:hover {
     color: rgb(150, 150, 233);
@@ -64,11 +93,33 @@ h1 {
 header .logo a {
     background-image: url("images/logo.png");
     background-repeat: no-repeat;
-    background-size: 200px;
+    background-size: 100px;
     display: inline-block;
-    height: 90px;
-    width:200px;
+    height: 50px;
+    width:100px;
     position: relative;
     top: -17px;
     text-indent: -999999999px;
+}
+
+header .mobile {
+    display: none;
+}
+
+@media screen and (max-width:705px){
+    header {
+        height:250px;
+        background-position: 0 -20px;
+    }
+    header h1 {
+        padding: -0px 20px 10px 50px;
+        position: relative;
+        top: -50px
+    }
+    header .mobile{
+        display: inline-block;
+    }
+    header .desktop{
+        display: none;
+    }
 }
